# youtube-

./: .env.example  .gitignore  README.md  VERSION_MIGRATION_REPORT.md  research.py  run.py  使用指南.md  快速开始.md  项目功能总览.md
v3-2026-2-03-spec-sync/: .claudeignore  .env.example  .gitignore  CLAUDE.md  DATA_MIGRATION_PLAN.md  MIGRATION_EXECUTION_GUIDE.md  MIGRATION_START_HERE.md  NEON_SETUP_GUIDE.md  OPTIMIZATION_COMPLETE.md  PROJECT_INIT_REPORT.md  QUICKSTART.md  SETUP_REPORT.md  drizzle.config.json  package.json  pyproject.toml  requirements.txt  search-results.md  search-test.md  tsconfig.json
v3-2026-2-03-spec-sync/.42cog/cog/: cog-collect.md  cog-context.md  cog-data.md  cog-impl.md  cog-process.md  cog.md
v3-2026-2-03-spec-sync/.42cog/meta/: meta.md
v3-2026-2-03-spec-sync/.42cog/plan/: Phase4-首页完成计划.md  Phase5-套利分析页面计划.md  Phase6-信息报告页面计划.md  Phase7-创作者中心计划.md  总体路线图与优先级.md
v3-2026-2-03-spec-sync/.42cog/real/: real-analysis-quality.md  real-data-collection.md  real-ui-creator-center.md  real-ui-design.md  real-ui-info-report.md  real.md
v3-2026-2-03-spec-sync/.42cog/skills/: check-naming-violations.skill.md  data-visualization.skill.md  page-layout-design.skill.md  ui-layout-design.skill.md
v3-2026-2-03-spec-sync/.42cog/spec/: 2026-02-03_spec_naming-convention.md  pattern-registry.yaml
v3-2026-2-03-spec-sync/.42cog/work/: 2026-02-03_data_migration_summary.md  2026-02-03_insight_ecosystem-protected-names.md  2026-02-03_log_optimization-complete.md  2026-02-03_report_naming-audit.md  2026-02-03_v3_data_迁移摘要.md  2026-02-03_v3_guide_采集指令.md  2026-02-03_v3_guide_采集逻辑.md  2026-02-03_v3_insight_模式洞察-候补模式.md  2026-02-03_v3_insight_模式洞察-变量分布-输出.md  2026-02-03_v3_insight_模式洞察-时间维度-方法.md  2026-02-03_v3_insight_模式洞察-时间维度-输出.md  2026-02-03_v3_insight_模式洞察-用户维度-数据.md  2026-02-03_v3_insight_模式洞察-用户维度-方法.md  2026-02-03_v3_insight_模式洞察-空间维度-方法.md  2026-02-03_v3_insight_模式洞察-索引.md  2026-02-03_v3_insight_模式洞察-补充分析.md  2026-02-03_v3_insight_模式洞察-频道维度-数据.md  2026-02-03_v3_insight_生态系统保留名称.md  2026-02-03_v3_log_优化完成记录.md  2026-02-03_v3_migration_从v2迁移.md  2026-02-03_v3_report_v2模式验证问题.md  (+32 more)
v3-2026-2-03-spec-sync/.claude/: PLUGIN_IMPORT_REPORT.md  README.md  SKILLS_SETUP_REPORT.md  settings.local.json
v3-2026-2-03-spec-sync/others/: MIGRATION_CHECKLIST.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_STATUS.md  QUICK_START.txt
v3-2026-2-03-spec-sync/scripts/: migrate_v2_to_v3.ts  validate_v2_data.ts
web/: demo.html  (+3 more)
(+594 files in other folders)
