[project]
name = "youtube-minimal-video-story-v3"
version = "3.0.0"
description = "YouTube 端到端内容创作流水线 v3 - 规范同步版"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Content Creation Team"}
]
keywords = ["youtube", "content-creation", "data-analysis", "arbitrage", "video-workflow"]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "scipy>=1.11.0",
    "jieba>=0.42.1",
    "nltk>=3.8.0",
    "yt-dlp>=2025.1.0",
    "moviepy>=1.0.3",
    "playwright>=1.40.0",
    "pyautogui>=0.9.54",
    "beautifulsoup4>=4.12.0",
    "pydub>=0.25.1",
    "openai-whisper>=20231106",
    "pillow>=10.1.0",
    "opencv-python>=4.8.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=41.0.0",
    "sentry-sdk>=1.38.0",
    "aioredis>=2.0.1",
    "cachetools>=5.3.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Repository = "https://github.com/yourusername/youtube-minimal-video-story"
Documentation = "https://docs.example.com"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
